<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient1"

    tools:context=".ui.InvoiceGenerator">
    <include
        layout="@layout/app_bar"
        android:id="@+id/app_bar"></include>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    app:cardCornerRadius="5dp"
style="@style/CardView"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textViewenterdetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorpurple"
            android:text="@string/enter_details" />

        <EditText
            android:id="@+id/editTextInvoiceNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
android:layout_marginStart="@dimen/marginbleft"
            android:layout_marginEnd="@dimen/marginright"
            android:layout_marginTop="20dp"
            android:hint="@string/invoice_no"

            android:textColor="@color/colorPrimary"

             />

        <EditText
            android:id="@+id/editTextOrderDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginbleft"
            android:layout_marginEnd="@dimen/marginright"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:hint="@string/order_date"></EditText>


        <EditText
            android:id="@+id/editTextDeliveryDate"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/marginbleft"
            android:layout_marginEnd="@dimen/marginright"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/delivery_date"
            android:ems="10"

             />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioButtonsimple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
android:onClick="onRadioButtonClicked"
            android:text="@string/simple_without_tax" />

        <RadioButton
            android:id="@+id/radioButtongst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
android:onClick="onRadioButtonClicked"
            android:text="@string/gst" /></RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/marginbleft"
            android:id="@+id/gstcontainer"
          android:visibility="gone"
            android:layout_marginEnd="@dimen/marginright"

            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/spinnergst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginbleft"
                android:layout_marginEnd="@dimen/marginright"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/marginbleft"


            android:layout_marginEnd="@dimen/marginright"

            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                />
        </LinearLayout>

       </LinearLayout>
</android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"

        style="@style/CardView"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorpurple"
            android:layout_marginTop="20dp"
android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/company_details" />

        <EditText
            android:id="@+id/editTextCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="@dimen/marginbleft"
            android:layout_marginEnd="@dimen/marginright"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:hint="@string/name" />


        <EditText
            android:id="@+id/editTextcompanyphoneno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="@dimen/marginbleft"
            android:layout_marginEnd="@dimen/marginright"
            android:layout_marginTop="20dp"
            android:inputType="phone"
            android:hint="@string/phone_number" />
        <EditText
            android:id="@+id/editTextcompanyaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="@dimen/marginbleft"
            android:layout_marginEnd="@dimen/marginright"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:hint="@string/address" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        style="@style/CardView"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:id="@+id/textViewproductdetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorpurple"
            android:text="@string/product_details" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/fragmentcontainer"
            android:layout_marginTop="10dp"
            android:layout_margin="-10dp"
            android:layout_marginBottom="-10dp"
            android:clipChildren="true">
            </LinearLayout>


        <Button
            android:id="@+id/buttonproduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/marginbleft"
            android:layout_marginEnd="@dimen/marginright"
            android:layout_marginBottom="10dp"
            android:text="@string/add_another_product" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="20dp"
        style="@style/CardView"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">
        <TextView
            android:id="@+id/textViewRecipientdetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorpurple"
            android:text="@string/recipient_details" />

        <EditText
            android:id="@+id/editTextrecipientNAME"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="@dimen/marginbleft"
            android:layout_marginEnd="@dimen/marginright"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/editTextrecipientPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="@dimen/marginbleft"
            android:layout_marginEnd="@dimen/marginright"
            android:layout_marginTop="20dp"
            android:inputType="phone"
            android:hint="@string/phone_no" />

        <EditText
            android:id="@+id/editTextrecipientAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="@dimen/marginbleft"
            android:layout_marginEnd="@dimen/marginright"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:hint="@string/address" />

        <EditText
            android:id="@+id/editTextDescripition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="@dimen/marginbleft"
            android:layout_marginEnd="@dimen/marginright"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:hint="@string/descripition" />

        <Button
            android:id="@+id/buttoncreateinvoice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="@dimen/marginbleft"

            android:onClick="CreateInvoice"
android:layout_marginBottom="5dp"
            android:text="@string/create_invoice" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
</ScrollView>
    </LinearLayout>
